# Scribe-Text-Editor

./: CMakeCache.txt  README.md
CustomTextEditor/: CustomTextEditor.pro  README.md  documentmetrics.h  editor.cpp  editor.h  finddialog.cpp  finddialog.h  gotodialog.cpp  gotodialog.h  highlighter.cpp  highlighter.h  language.cpp  language.h  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pythonhighlighter.cpp  pythonhighlighter.h  resources.qrc  searchhistory.cpp  searchhistory.h  settings.cpp  settings.h  tabbededitor.cpp  tabbededitor.h  texteditor.rc  utilityfunctions.cpp  utilityfunctions.h
CustomTextEditor/highlighters/: chighlighter.cpp  highlighter.cpp  highlighter.h  javahighlighter.cpp  javahighlighter.h  pythonhighlighter.cpp
src/: CMakeLists.txt  Scribe.pro  deviceinputdialog.cpp  deviceinputdialog.h  deviceinputdialog.ui  documentmetrics.h  editor.cpp  editor.h  finddialog.cpp  finddialog.h  gotodialog.cpp  gotodialog.h  language.cpp  language.h  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memoryterminal.cpp  memoryterminal.h  memoryterminal.ui  metricreporter.cpp  metricreporter.h  resources.qrc  searchhistory.cpp  searchhistory.h  tabbededitor.cpp  tabbededitor.h  utilityfunctions.cpp  utilityfunctions.h
src/highlighters/: chighlighter.cpp  chighlighter.h  cpphighlighter.cpp  cpphighlighter.h  pythonhighlighter.cpp
